<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World!</string>
    <string name="app_name">MXA Manager</string>
<string name="main_btn_service">Connect to service</string>
<string name="main_btn_server">Connect to server</string>
<string name="main_btn_disconnect">Disconnect from Server</string>
<string name="pref_xmpp_server">XMPP Server Preferences</string>
<string name="pref_host_dialogtitle">Enter the XMPP host</string>
<string name="pref_host_title">XMPP host</string>
<string name="pref_host_summary">The XMPP host\'s address</string>
<string name="pref_port_dialogtitle">Enter the host\'s port</string>
<string name="pref_port_title">Host\'s port</string>
<string name="pref_port_summary">The XMPP host\'s port</string>
<string name="pref_service_dialogtitle">Enter the XMPP service name</string>
<string name="pref_service_title">XMPP service name</string>
<string name="pref_service_summary">The XMPP service name</string>
<string name="pref_resource_dialogtitle">Enter the client\'s resource name</string>
<string name="pref_resource_title">XMPP resource</string>
<string name="pref_resource_summary">The client\'s resource</string>
<string name="menu_pref">Preferences</string>
<string name="pref_title">Preferences</string>
<string name="pref_xmpp_credentials">XMPP User Credentials</string>
<string name="pref_xmpp_user_dialogtitle">Enter your XMPP username</string>
<string name="pref_xmpp_user_title">XMPP username</string>
<string name="pref_xmpp_user_summary">Your username</string>
<string name="pref_xmpp_password_dialogtitle">Enter your XMPP password</string>
<string name="pref_xmpp_password_title">XMPP password</string>
<string name="pref_xmpp_password_summary">Your password</string>
<string name="main_btn_message">Send message</string>
<string name="main_btn_iq">Send Service Discovery IQ</string>
<string name="main_btn_presence">Set Presence Away</string>
<string name="main_btn_file">Send file</string>
<string name="pref_resource_default">MXA</string>
<string name="sm_txt_head">This is the XMPP Service Monitor where you can check if the XMPP Service is currently connected to the server.</string>
<string name="sm_tbtn_connection_on">XMPP connected</string>
<string name="sm_tbtn_connection_off">XMPP disconnected</string>
<string name="main_btn_monitor">Show Service Monitor</string>
<string name="sb_txt_title">MXA Manager</string>
<string name="sb_txt_text">XMPP connected</string>
<string name="setup_welcome">Welcome to MXA setup!\n\nUse any Jabber/XMPP account with MXA.\n\nMost popular XMPP accounts can be set up in 2 steps!</string>
<string name="setup_btn_next">Next</string>
<string name="setup_basics_instructions">Type your XMPP account data:</string>
<string name="setup_basics_address_hint">XMPP ID</string>
<string name="setup_basics_password_hint">Password</string>
<string name="setup_btn_manual">Manual setup</string>
<string name="setup_complete_conclusion">Your XMPP account was successfully added.\n\nHave fun using all the collaborative features out there!</string>
<string name="setup_btn_close">Close setup</string>
</resources>
