<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/app_name">

	<PreferenceCategory android:title="@string/pref_xmpp_server">

		<EditTextPreference android:key="pref_host"
			android:title="@string/pref_host_title" android:summary="@string/pref_host_summary"
			android:dialogTitle="@string/pref_host_dialogtitle" />

		<EditTextPreference android:key="pref_port"
			android:title="@string/pref_port_title" android:summary="@string/pref_port_summary"
			android:dialogTitle="@string/pref_port_dialogtitle" />

		<EditTextPreference android:key="pref_service"
			android:title="@string/pref_service_title" android:summary="@string/pref_service_summary"
			android:dialogTitle="@string/pref_service_dialogtitle" />

		<EditTextPreference android:key="pref_resource"
			android:title="@string/pref_resource_title" android:summary="@string/pref_resource_summary"
			android:dialogTitle="@string/pref_resource_dialogtitle" android:defaultValue="@string/pref_resource_default"/>

	</PreferenceCategory>



	<PreferenceCategory android:title="@string/pref_xmpp_credentials">
		<EditTextPreference android:key="pref_xmpp_user"
			android:dialogTitle="@string/pref_xmpp_user_dialogtitle"
			android:title="@string/pref_xmpp_user_title" android:summary="@string/pref_xmpp_user_summary"></EditTextPreference>
		<EditTextPreference android:key="pref_xmpp_password"
			android:dialogTitle="@string/pref_xmpp_password_dialogtitle"
			android:title="@string/pref_xmpp_password_title" android:summary="@string/pref_xmpp_password_summary"></EditTextPreference>
	</PreferenceCategory>
</PreferenceScreen>